# Actuator-Control

./: CMakeLists.txt  Cargo.toml  README.md  pyproject.toml
actuator_control/: __init__.py  api.py  common.py  erob.py  robstride.py  robstride_protocol.py  robstride_table.py  sito.py
actuator_control/sito/: bus.py
examples/: move_erob.py  move_sito.py  test_erob.py
examples/actuator_characterization/: README.md  generate_test_signal.py  plot_data.py  run_erob_characterization.py
examples/actuator_characterization/data/: test_signal.npz
include/actuator_control/: actuator_bus.hpp  can_socket.hpp  erob_bus.hpp  motor.hpp  robstride_bus.hpp  robstride_protocol.hpp  robstride_table.hpp  sito_bus.hpp
python/: bindings.cpp
src/: actuator_bus.cpp  can_socket.cpp  erob.rs  erob_bus.cpp  python.rs  robstride.rs  robstride_bus.cpp  robstride_table.cpp  sito.rs  sito_bus.cpp
src/protocol/: robstride.rs
tests/: test_module_compat.py  test_public_api.py  test_vcan_smoke.py
tests/cpp/: CMakeLists.txt  test_actuator_bus.cpp  test_robstride_tables.cpp
