[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "actuator-control"
version = "1.0.0"
description = "Unified CAN actuator control helpers for eRob, Robstride, and Sito motors."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
examples = [
    "loop-rate-limiters",
    "matplotlib",
    "numpy",
    "tqdm",
]

[tool.scikit-build]
cmake.args = ["-DBUILD_TESTING=OFF"]
wheel.packages = ["actuator_control"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
